style/fields/input.css
input, textarea, select{
  appearance: none; /*tirar o estilo padrao */
  width: 100%;
  border-radius: .5rem;
  border: 1px solid var(--stroke-default);

  padding: .75rem 1rem;
  font: var(--text);
}

label{
  font: var(--text-sm);
  color: var(--text-secondary);

  display: block;
  margin-bottom: .25rem;
}

input:focus,
select:focus,
textarea:focus,
input[type="date"]:focus-within{
  outline: .25rem solid var(--surface-secondary);
  border: .125rem solid var(--stroke-highlight);
  /* para funcionar no safari */
  outline-offset: .1px;
}

input[type="date"]{
  position: relative;
  &::-webkit-calendar-picker-indicator{
    opacity: 0;
  }

  &::before{
    content: "";
    width: 1.25rem;
    height: 1.25rem;
    position: absolute;
    background: url(../../assets/icons/calendar-03.svg) center/contain;
    right: 1rem;

    /* centralizar o icon */
    top: 50%;
    transform: translateY(-50%);
  }
}

select{
  background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem) center;
}

.address .flex{
  gap: 1.25rem;
}

.input-wrapper:has([disabled]){
  opacity: .5;
}

input{
  & [disabled]{
    background-color: var(--surface-disabled);
    border: solid 1px var(--stroke-default);

    color: var(--text-primary);
  }

  &:invalid{
    border: .125rem solid var(--semantic-error);
  }

  & + small{
    font: var(--text-sm);
    color: #78716c;

    display: inline-block;
    margin-top: .25rem;
  }

  &[required] + .error{
    display: flex;
    align-items: center;
    gap: .25rem;

    font: var(--text-sm);
    color: var(--semantic-error);
    margin-top: .25rem;
  }

  &:not(:focus):valid + .error{
    display: none;
  }
}

